Agregado comentarios al código

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <tbody id="cuerpoTabla"></tbody>
       </table>
       <div id="miModal" class="modal">
-        <span class="close">&times;</span>
+        <span class="close">&times;</span>  <!-- crea un elemento con clase "close" que muestra una "X" para cerrar lo que se muestra -->
         <img class="modal-content" id="img01">
         <div id="caption"></div>
       </div>      
